--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fasme Software - Innovative Web & App Solutions</title>
+  <title>Fastme Software - Innovative Web & App Solutions</title>
   <meta name="description" content="Fasme Software specializes in Cyber Security, Web Development, and the innovative social app Fastme." />
   <meta property="og:title" content="Fasme Software - Web & App Solutions" />
   <meta property="og:description" content="Explore our expertise in Cyber Security, Web Development, and the Fastme social app." />
